--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,4 +1,5 @@
 db.username=user
 db.password=passer123@
-#db.username=${FINTECH_DB_USER}
-#db.password=${FINTECH_DB_PWD}
+db.userProd=${env.WEB_DB_USER}
+db.passwordProd=${env.WEB_DB_PWD}
+db.urlDbProd=${env.WEB_URL_DB_PWD}
